--- a/seller-panel and website/web-assets/assets/scss/Pages/_pages.scss
+++ b/seller-panel and website/web-assets/assets/scss/Pages/_pages.scss
@@ -3,5 +3,9 @@
 @import "./cart.scss";
 @import "./about.scss";
 @import "./home.scss";
+@import "./my-orders.scss";
+@import "./my-wishlist.scss";
+@import "./my-reviews.scss";
+@import "./my-profile.scss";
 @import "./terms-condition.scss";
 @import "./checkout.scss";
