--- a/seller-panel and website/web-assets/assets/scss/Pages/product-details.scss
+++ b/seller-panel and website/web-assets/assets/scss/Pages/product-details.scss
@@ -115,6 +115,15 @@
 
                             }
                         }
+                        .btn-chat-us {
+                            font-size: 12px;
+                            border-color: #007BFF;
+                            background-color: #007BFF !important;
+                            color: white;
+                            transition: all 0.4s ease-in-out;
+                            background-color: transparent;
+                            cursor: pointer;
+                        }
                     }
                 }
 
