--- a/seller-panel and website/web-assets/assets/scss/style.scss
+++ b/seller-panel and website/web-assets/assets/scss/style.scss
@@ -47,7 +47,7 @@
     border-bottom: 1px solid #ccc;
   }
 
-  .tab-link {
+  .tab-link-noti {
     flex: 1;
     padding: 10px;
     cursor: pointer;
@@ -58,11 +58,11 @@
     transition: background-color 0.3s;
   }
 
-  .tab-link.active {
+  .tab-link-noti.active {
     color: navy;
   }
 
-  .tab-content {
+  .tab-content-noti {
     display: none;
     padding: 10px;
   }
