--- a/seller-panel and website/web-assets/assets/css/style.css
+++ b/seller-panel and website/web-assets/assets/css/style.css
@@ -3372,6 +3372,186 @@ footer .terms-section .terms ul li a {
           justify-content: space-between;
 }
 
+.chats-container {
+  max-width: 1170px;
+  margin: auto;
+}
+.chats-container img {
+  max-width: 100%;
+}
+.chats-container .inbox_people {
+  background: #f8f8f8 none repeat scroll 0 0;
+  float: left;
+  overflow: hidden;
+  width: 40%;
+  border-right: 1px solid #c4c4c4;
+}
+.chats-container .inbox_msg {
+  border: 1px solid #c4c4c4;
+  clear: both;
+  overflow: hidden;
+}
+.chats-container .top_spac {
+  margin: 20px 0 0;
+}
+.chats-container .recent_heading {
+  float: left;
+  width: 40%;
+}
+.chats-container .srch_bar {
+  display: inline-block;
+  text-align: right;
+  width: 60%;
+}
+.chats-container .headind_srch {
+  padding: 10px 29px 10px 20px;
+  overflow: hidden;
+  border-bottom: 1px solid #c4c4c4;
+}
+.chats-container .recent_heading h4 {
+  color: #05728f;
+  font-size: 21px;
+  margin: auto;
+}
+.chats-container .srch_bar input {
+  border: 1px solid #cdcdcd;
+  border-width: 0 0 1px 0;
+  width: 80%;
+  padding: 2px 0 4px 6px;
+  background: none;
+}
+.chats-container .srch_bar .input-group-addon button {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  padding: 0;
+  color: #707070;
+  font-size: 18px;
+}
+.chats-container .srch_bar .input-group-addon {
+  margin: 0 0 0 -27px;
+}
+.chats-container .chat_ib h5 {
+  font-size: 15px;
+  color: #464646;
+  margin: 0 0 8px 0;
+}
+.chats-container .chat_ib h5 span {
+  font-size: 13px;
+  float: right;
+}
+.chats-container .chat_ib p {
+  font-size: 14px;
+  color: #989898;
+  margin: auto;
+}
+.chats-container .chat_img {
+  float: left;
+  width: 11%;
+}
+.chats-container .chat_ib {
+  float: left;
+  padding: 0 0 0 15px;
+  width: 88%;
+}
+.chats-container .chat_people {
+  overflow: hidden;
+  clear: both;
+}
+.chats-container .chat_list {
+  border-bottom: 1px solid #c4c4c4;
+  margin: 0;
+  padding: 18px 16px 10px;
+}
+.chats-container .inbox_chat {
+  height: 550px;
+  overflow-y: scroll;
+}
+.chats-container .active_chat {
+  background: #ebebeb;
+}
+.chats-container .incoming_msg_img {
+  display: inline-block;
+  width: 6%;
+}
+.chats-container .received_msg {
+  display: inline-block;
+  padding: 0 0 0 10px;
+  vertical-align: top;
+  width: 92%;
+}
+.chats-container .received_withd_msg p {
+  background: #ebebeb none repeat scroll 0 0;
+  border-radius: 3px;
+  color: #646464;
+  font-size: 14px;
+  margin: 0;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+.chats-container .time_date {
+  color: #747474;
+  display: block;
+  font-size: 12px;
+  margin: 8px 0 0;
+}
+.chats-container .received_withd_msg {
+  width: 57%;
+}
+.chats-container .mesgs {
+  float: left;
+  padding: 30px 15px 0 25px;
+  width: 60%;
+}
+.chats-container .sent_msg p {
+  background: #05728f none repeat scroll 0 0;
+  border-radius: 3px;
+  font-size: 14px;
+  margin: 0;
+  color: #fff;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+.chats-container .outgoing_msg {
+  overflow: hidden;
+  margin: 26px 0 26px;
+}
+.chats-container .sent_msg {
+  float: right;
+  width: 46%;
+}
+.chats-container .input_msg_write input {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #4c4c4c;
+  font-size: 15px;
+  min-height: 48px;
+  width: 100%;
+}
+.chats-container .type_msg {
+  border-top: 1px solid #c4c4c4;
+  position: relative;
+}
+.chats-container .msg_send_btn {
+  background: #05728f none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 0;
+  top: 11px;
+  width: 33px;
+}
+.chats-container .messaging {
+  padding: 0 0 50px 0;
+}
+.chats-container .msg_history {
+  height: 516px;
+  overflow-y: auto;
+}
+
 .noti-counter {
   background-color: #878dc3;
   color: white;
@@ -3404,7 +3584,7 @@ footer .terms-section .terms ul li a {
   -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 300px;
-  z-index: 2;
+  z-index: 6;
   border-radius: 5px;
 }
 .dropdown-noti .dropdown-header h3 {
