--- a/seller-panel and website/web-assets/assets/scss/style.scss
+++ b/seller-panel and website/web-assets/assets/scss/style.scss
@@ -30,6 +30,19 @@
     width: 300px;
     z-index: 6;
     border-radius: 5px;
+    .btn-noti-view{
+      display: block;
+        background: #007bff;
+        width: 100%;
+        color: white;
+        padding: 15px 0px;
+        transition:all 0.3s ease-in-out;
+        border-radius: 0px 0px 5px 5px;
+        text-decoration: none;
+        &:hover{
+            background-color:#2863a3;          
+        }
+    }
   }
 
   .dropdown-header h3 {
@@ -65,6 +78,8 @@
   .tab-content-noti {
     display: none;
     padding: 10px;
+    height: 172px;
+    overflow:scroll;
   }
 
   .notification {
