--- a/seller-panel and website/web-assets/assets/scss/Pages/product-details.scss
+++ b/seller-panel and website/web-assets/assets/scss/Pages/product-details.scss
@@ -457,6 +457,9 @@
                         color: #007bff;
                         background-color:transparent;
                         transition: all 0.2s ease-in-out;
+                        a{
+                            text-decoration: none;
+                        }
                         &:hover{
                             background-color: #007bff;
                             color: white;                    
