--- a/seller-panel and website/web-assets/assets/css/style.css
+++ b/seller-panel and website/web-assets/assets/css/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 .navbar {
-  height: 60px;
+  height: 80px;
   padding: 0px 30px;
-  background-color: #10182f;
-  color: #596280;
+  background-color: white;
+  color: #ff7f00;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,8 +21,8 @@
   gap: 20px;
 }
 .navbar .first-half .logo .logo-image {
-  width: auto;
-  height: 70px;
+  height: 100px;
+  width: 110px;
 }
 .navbar .first-half .links {
   display: -webkit-box;
@@ -145,6 +145,14 @@
   margin: 0;
   gap: 10px;
   padding: 0;
+  /* TOOLTIP STYLES FROM THIS PEN https://codepen.io/tutsplus/pen/WROvdG */
+  /* Applies to all tooltips */
+  /* Make the tooltips respond to hover */
+  /* don't show empty tooltips */
+  /* FLOW: UP */
+  /* FLOW: DOWN */
+  /* KEYFRAMES */
+  /* FX All The Things */
 }
 .navbar .second-half ul li {
   list-style: none;
@@ -155,137 +163,6 @@
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
-  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@500&family=Noto+Sans+JP:wght@400;500&family=Noto+Sans+KR:wght@500&family=Open+Sans:wght@400;500&display=swap");
-  /* Style for the dropdown content */
-  /* Style for the dropdown content items */
-  /* Style for the dropdown content items on hover */
-  /* Show the dropdown content when the dropdown button is clicked */
-  /* Animate the dropdown content */
-  /* Scrollbar styles */
-  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-}
-.navbar .second-half ul li .dropdown button {
-  /* background-color: #253849; */
-  min-width: 130px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  height: 40px;
-  border-radius: 5px;
-  color: white;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-.navbar .second-half ul li .dropdown button img {
-  margin: 0 5px 0 0;
-}
-.navbar .second-half ul li .dropdown button img,
-.navbar .second-half ul li .dropdown-content li img {
-  width: 28px;
-}
-.navbar .second-half ul li .dropdown button,
-.navbar .second-half ul li .dropdown-content li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 14px;
-  font-family: "Open Sans", sans-serif;
-  font-family: "Noto Sans JP", sans-serif;
-  font-family: "Noto Sans Arabic", sans-serif;
-  font-family: "Noto Sans KR", sans-serif;
-  font-weight: 500;
-}
-.navbar .second-half ul li .arrow-down {
-  width: 0;
-  height: 0;
-  display: inline-block;
-  vertical-align: middle;
-  border-style: solid;
-  border-width: 4px 4px 0 4px;
-  border-color: #fff transparent transparent transparent;
-  margin: 0 0 0 5px;
-}
-.navbar .second-half ul li .dropdown button:hover {
-  cursor: pointer;
-  background-color: #3c5b77;
-}
-.navbar .second-half ul li .dropdown-content {
-  display: none;
-  position: absolute;
-  margin: 1px 0 0 0;
-  padding: 0;
-  background-color: #f5f5f5;
-  min-width: 160px;
-  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 5;
-  border-radius: 5px;
-  overflow-y: scroll;
-  max-height: 315px;
-}
-.navbar .second-half ul li .dropdown-content li {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-}
-.navbar .second-half ul li .dropdown-content li img {
-  margin: 0 20px 0px 20px;
-}
-.navbar .second-half ul li .dropdown-content li:hover {
-  background-color: #f1f1f1;
-  cursor: pointer;
-  color: blue;
-  border-radius: 5px;
-}
-.navbar .second-half ul li .dropdown:focus-within .dropdown-content {
-  display: block;
-}
-@-webkit-keyframes slideIn {
-  from {
-    opacity: 0;
-    -webkit-transform: translateY(-10px);
-            transform: translateY(-10px);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-@keyframes slideIn {
-  from {
-    opacity: 0;
-    -webkit-transform: translateY(-10px);
-            transform: translateY(-10px);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-.navbar .second-half ul li .dropdown-content {
-  -webkit-animation: slideIn 0.3s ease-out;
-          animation: slideIn 0.3s ease-out;
-}
-.navbar .second-half ul li ::-webkit-scrollbar {
-  width: 8px;
-  height: 10px;
-}
-.navbar .second-half ul li ::-webkit-scrollbar-thumb {
-  border-radius: 8px;
-  background: #c2c9d2;
 }
 .navbar .second-half ul li input,
 .navbar .second-half ul li button {
@@ -301,17 +178,19 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: white;
+  background-color: rgb(245, 243, 243);
   border-radius: 50px;
 }
 .navbar .second-half ul li .search-box-input {
-  width: 0px;
+  width: 240px;
   font-size: 14px;
-  background-color: white;
+  background-color: rgb(245, 243, 243);
   color: black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 50px;
+  padding-left: 2em;
+  padding-right: 1em;
 }
 .navbar .second-half ul li .search-box-btn {
   display: -webkit-box;
@@ -320,7 +199,7 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  background-color: rgb(127, 133, 153);
+  background-color: rgb(0, 0, 0);
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -349,25 +228,296 @@
   color: black;
   opacity: 0.7;
 }
-.navbar .second-half ul li .search-box:hover .search-box-input {
-  padding-left: 2em;
-  padding-right: 1em;
-  width: 240px;
-}
 .navbar .second-half ul li .search-box-btn:active {
   -webkit-transform: scale(0.75);
           transform: scale(0.75);
 }
-.navbar .second-half ul li .btn-login {
-  /* background: hsla(260, 11%, 85%, 1); */
-  color: white;
-  border: none;
+.navbar .second-half ul li .click-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 120px;
+  height: 40px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0.5rem;
+  line-height: 35px;
+  border: 1px solid;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 16px;
+  color: #000;
+  text-decoration: none;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-.navbar .second-half ul li .btn-signUp {
-  background: rgb(127, 133, 153);
-  color: white;
-  border: none;
-  padding: 10px 15px;
+.navbar .second-half ul li .btn-style700 {
+  position: relative;
+  border-color: #979695;
+  color: #979695;
+}
+.navbar .second-half ul li .btn-style700::before, .navbar .second-half ul li .btn-style700::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-color: #dd6395;
+  border-radius: 5px;
+  border-style: solid;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+  content: "";
+  z-index: 1;
+}
+.navbar .second-half ul li .btn-style700::before {
+  width: 0;
+  height: 100%;
+  border-width: 1px 0 1px 0;
+}
+.navbar .second-half ul li .btn-style700::after {
+  width: 100%;
+  height: 0;
+  border-width: 0 1px 0 1px;
+}
+.navbar .second-half ul li .btn-style700:hover {
+  border-color: #ff7f00;
+  color: #ff7f00;
+}
+.navbar .second-half ul li .btn-style700:hover::before {
+  width: 100%;
+  border-width: 1px 0 1px 0;
+}
+.navbar .second-half ul li .btn-style700:hover::after {
+  height: 100%;
+  border-width: 0 1px 0 1px;
+}
+.navbar .second-half ul li .btn-style702 {
+  position: relative;
+  border-color: transparent;
+  color: #fff;
+  background-color: #ff7f00;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.navbar .second-half ul li .btn-style702::before, .navbar .second-half ul li .btn-style702::after {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  content: "";
+}
+.navbar .second-half ul li .btn-style702::before {
+  width: 100%;
+  left: 0;
+  border-radius: 5px;
+  background-color: #ff7f00;
+  z-index: -1;
+}
+.navbar .second-half ul li .btn-style702::after {
+  width: 0;
+  left: 50%;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  z-index: 1;
+}
+.navbar .second-half ul li .btn-style702:hover {
+  color: #716eef;
+  background-color: transparent;
+}
+.navbar .second-half ul li .btn-style702:hover::before {
+  -webkit-transform: scale(0, 1);
+          transform: scale(0, 1);
+}
+.navbar .second-half ul li .btn-style702:hover::after {
+  width: 100%;
+  border-color: #716eef;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+.navbar .second-half ul #select-container {
+  position: absolute;
+  width: 50px;
+  height: 40px;
+  z-index: 10;
+  background: #FFFFFF;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border-radius: 10px;
+  border: 0.5px solid rgba(202, 219, 226, 0.4);
+  -webkit-box-shadow: 0px 3px 6px rgba(79, 104, 113, 0.2);
+          box-shadow: 0px 3px 6px rgba(79, 104, 113, 0.2);
+  overflow: hidden;
+  overflow-y: scroll;
+  -webkit-transition: height 0.2s ease-in-out, border-radius 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+  transition: height 0.2s ease-in-out, border-radius 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+  transition: height 0.2s ease-in-out, border-radius 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  transition: height 0.2s ease-in-out, border-radius 0.2s ease-in-out, box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+}
+.navbar .second-half ul #select-container::-webkit-scrollbar {
+  width: 0; /* Scrollbar ki width zero karne ke liye */
+  height: 0; /* Horizontal scrollbar ko bhi hide karne ke liye */
+}
+.navbar .second-half ul #select-container:hover {
+  height: 186px; /* Can't use height: auto & transition effect */
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 7px 10px rgba(79, 104, 113, 0.3);
+          box-shadow: 0px 7px 10px rgba(79, 104, 113, 0.3);
+}
+.navbar .second-half ul #select-container ul {
+  list-style-type: none;
+  position: relative;
+  padding: 17px 0px 0px 38px;
+}
+.navbar .second-half ul #select-container ul li {
+  opacity: 1;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+}
+.navbar .second-half ul #select-container ul li:first-child img {
+  cursor: default;
+}
+.navbar .second-half ul #select-container ul li img {
+  width: 25px;
+  height: 25px;
+  display: block;
+  left: 50%;
+  -webkit-transform: translate(-103%, -40%);
+          transform: translate(-103%, -40%);
+  margin-bottom: 8px;
+  border-radius: 50%;
+  border: 2px solid #FFFFFF;
+  -webkit-box-shadow: 0px 0px 6px rgba(79, 104, 113, 0.3);
+          box-shadow: 0px 0px 6px rgba(79, 104, 113, 0.3);
+  cursor: pointer;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+.navbar .second-half ul #select-container ul li img:hover {
+  -webkit-box-shadow: 0px 5px 10px rgba(79, 104, 113, 0.3);
+          box-shadow: 0px 5px 10px rgba(79, 104, 113, 0.3);
+  -webkit-transform: translate(-103%, -40%) scale(1.08);
+          transform: translate(-103%, -40%) scale(1.08);
+}
+.navbar .second-half ul [tooltip] {
+  position: relative; /* opinion 1 */
+  font-weight: bold;
+}
+.navbar .second-half ul [tooltip]::before,
+.navbar .second-half ul [tooltip]::after {
+  text-transform: none; /* opinion 2 */
+  font-size: 12px; /* opinion 3 */
+  line-height: 1;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  pointer-events: none;
+  position: absolute;
+  display: none;
+  opacity: 0;
+}
+.navbar .second-half ul [tooltip]::before {
+  content: "";
+  border: 5px solid transparent; /* opinion 4 */
+  z-index: 1001; /* absurdity 1 */
+}
+.navbar .second-half ul [tooltip]::after {
+  content: attr(tooltip); /* magic! */
+  /* most of the rest of this is opinion */
+  font-family: Helvetica, sans-serif;
+  text-align: center;
+  /*
+    Let the content set the size of the tooltips
+    but this will also keep them from being obnoxious
+    */
+  width: 40px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 3px 0px;
+  border-radius: 0.3ch;
+  -webkit-box-shadow: 0 1em 2em -0.5em rgba(0, 0, 0, 0.35);
+          box-shadow: 0 1em 2em -0.5em rgba(0, 0, 0, 0.35);
+  background: #465663;
+  color: #fff;
+  z-index: 1000; /* absurdity 2 */
+}
+.navbar .second-half ul [tooltip]:hover::before,
+.navbar .second-half ul [tooltip]:hover::after {
+  display: block;
+}
+.navbar .second-half ul [tooltip=""]::before,
+.navbar .second-half ul [tooltip=""]::after {
+  display: none !important;
+}
+.navbar .second-half ul [tooltip]:not([flow])::before,
+.navbar .second-half ul [tooltip][flow^=up]::before {
+  bottom: 50%;
+  border-bottom-width: 0;
+  border-top-color: #465663;
+}
+.navbar .second-half ul [tooltip]:not([flow])::after,
+.navbar .second-half ul [tooltip][flow^=up]::after {
+  bottom: calc(50% + 5px);
+}
+.navbar .second-half ul [tooltip]:not([flow])::before,
+.navbar .second-half ul [tooltip]:not([flow])::after,
+.navbar .second-half ul [tooltip][flow^=up]::before {
+  left: -15.5px;
+  bottom: 40px;
+  -webkit-transform: translate(-50%, -0.5em);
+          transform: translate(-50%, -0.5em);
+}
+.navbar .second-half ul [tooltip][flow^=up]::after {
+  left: -15.5px;
+  bottom: 45px;
+  -webkit-transform: translate(-50%, -0.5em);
+          transform: translate(-50%, -0.5em);
+}
+.navbar .second-half ul [tooltip][flow^=down]::before {
+  top: 70%;
+  border-top-width: 0;
+  border-bottom-color: #465663;
+}
+.navbar .second-half ul [tooltip][flow^=down]::after {
+  top: calc(70% + 5px);
+}
+.navbar .second-half ul [tooltip][flow^=down]::before,
+.navbar .second-half ul [tooltip][flow^=down]::after {
+  left: -15.5px;
+  -webkit-transform: translate(-50%, 0.5em);
+          transform: translate(-50%, 0.5em);
+}
+@-webkit-keyframes tooltips-vert {
+  to {
+    opacity: 0.9;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
+}
+@keyframes tooltips-vert {
+  to {
+    opacity: 0.9;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
+}
+.navbar .second-half ul [tooltip]:not([flow]):hover::before,
+.navbar .second-half ul [tooltip]:not([flow]):hover::after,
+.navbar .second-half ul [tooltip][flow^=up]:hover::before,
+.navbar .second-half ul [tooltip][flow^=up]:hover::after,
+.navbar .second-half ul [tooltip][flow^=down]:hover::before,
+.navbar .second-half ul [tooltip][flow^=down]:hover::after {
+  -webkit-animation: tooltips-vert 300ms ease-out forwards;
+          animation: tooltips-vert 300ms ease-out forwards;
 }
 
 footer {
@@ -3712,12 +3862,12 @@ body {
 }
 
 /* Scrollbar styles */
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 8px;
   height: 10px;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   border-radius: 8px;
   background: #c2c9d2;
 }
@@ -3729,6 +3879,7 @@ body {
   background-color: #007bff; /* Button color */
   color: white;
   padding: 15px 20px;
+  z-index: 10;
   border-radius: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3760,6 +3911,23 @@ body {
 }
 
 /* Slide in animation */
+@-webkit-keyframes slideIn {
+  0% {
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+    opacity: 1;
+  }
+}
 @keyframes slideIn {
   0% {
     -webkit-transform: translateY(100px);
@@ -3803,52 +3971,6 @@ body {
           transform: translateY(-5px);
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
           box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-}
-
-.kmacb__manager-border {
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  top: 50%;
-  left: 50%;
-  margin-top: -39.5px;
-  margin-left: -39.5px;
-  border-radius: 100%;
-  border: 2px solid #ffe787;
-  -webkit-animation: kmacb__manager-border-anim 1.5s ease-in-out 0.5s infinite;
-  animation: kmacb__manager-border-anim 1.5s ease-in-out 0.5s infinite;
-  opacity: 0.8;
-  -webkit-transform-origin: center;
-          transform-origin: center;
-}
-
-.kmacb__manager-fill {
-  background: #52aff7 center bottom no-repeat;
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  top: 50%;
-  left: 50%;
-  margin-top: -37.5px;
-  margin-left: -37.5px;
-  border-radius: 100%;
-  opacity: 0.5;
-  -webkit-animation: kmacb__manager-fill-anim 1.5s ease-in-out infinite;
-  animation: kmacb__manager-fill-anim 1.5s ease-in-out infinite;
-  -webkit-transform-origin: center;
-          transform-origin: center;
-}
-
-.kmacb__manager-circle {
-  background: #52aff7;
-  position: absolute;
-  width: 120px;
-  height: 120px;
-  top: 50%;
-  left: 50%;
-  margin-top: -60px;
-  margin-left: -60px;
-  border-radius: 100%;
 }
 
 /* Modal styles */
