--- a/seller-panel and website/web-assets/assets/scss/style.scss
+++ b/seller-panel and website/web-assets/assets/scss/style.scss
@@ -148,12 +148,12 @@ body{
   margin: auto auto 150px auto;
 }
   /* Scrollbar styles */
-  ::-webkit-scrollbar {
+  body::-webkit-scrollbar {
     width: 8px;
     height: 10px;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     border-radius: 8px;
     background: #c2c9d2;
 }
@@ -164,6 +164,7 @@ body{
   background-color: #007bff; /* Button color */
   color: white;
   padding: 15px 20px;
+  z-index: 10;
   border-radius: 50px;
   display: flex;
   align-items: center;
@@ -221,54 +222,6 @@ body{
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
-  
-  .kmacb__manager-border {
-    position: absolute;
-    width: 75px;
-    height: 75px;
-    top: 50%;
-    left: 50%;
-    margin-top: -39.5px;
-    margin-left: -39.5px;
-    border-radius: 100%;
-    border: 2px solid #ffe787;
-    -webkit-animation: kmacb__manager-border-anim 1.5s ease-in-out 0.5s infinite;
-    -moz-animation: kmacb__manager-border-anim 1.5s ease-in-out 0.5s infinite;
-    -ms-animation: kmacb__manager-border-anim 1.5s ease-in-out 0.5s infinite;
-    -o-animation: kmacb__manager-border-anim 1.5s ease-in-out 0.5s infinite;
-    animation: kmacb__manager-border-anim 1.5s ease-in-out 0.5s infinite;
-    opacity: 0.8;
-    transform-origin: center;
-  }
-  .kmacb__manager-fill {
-    background: #52aff7 center bottom no-repeat;
-    position: absolute;
-    width: 75px;
-    height: 75px;
-    top: 50%;
-    left: 50%;
-    margin-top: -37.5px;
-    margin-left: -37.5px;
-    border-radius: 100%;
-    opacity: 0.5;
-    -webkit-animation: kmacb__manager-fill-anim 1.5s ease-in-out infinite;
-    -moz-animation: kmacb__manager-fill-anim 1.5s ease-in-out infinite;
-    -ms-animation: kmacb__manager-fill-anim 1.5s ease-in-out infinite;
-    -o-animation: kmacb__manager-fill-anim 1.5s ease-in-out infinite;
-    animation: kmacb__manager-fill-anim 1.5s ease-in-out infinite;
-    transform-origin: center;
-  }
-  .kmacb__manager-circle {
-    background: #52aff7;
-    position: absolute;
-    width: 120px;
-    height: 120px;
-    top: 50%;
-    left: 50%;
-    margin-top: -60px;
-    margin-left: -60px;
-    border-radius: 100%;
-  }
   /* Modal styles */
 .modal-box {
     display: none; /* Hidden initially */
